[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://scripts/world/overworld.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/player/player.tscn" id="2"]
[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="3"]
[ext_resource type="PackedScene" path="res://scenes/ui/party_menu.tscn" id="4"]
[ext_resource type="PackedScene" path="res://scenes/ui/dialogue_box.tscn" id="5"]
[ext_resource type="PackedScene" path="res://scenes/ui/shop_menu.tscn" id="6"]

[node name="Overworld" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 0
offset_left = -1000.0
offset_top = -1000.0
offset_right = 1000.0
offset_bottom = 1000.0
color = Color(0.2, 0.55, 0.2, 1)

[node name="Player" parent="." instance=ExtResource("2")]
position = Vector2(0, 0)

[node name="OverworldHUD" type="CanvasLayer" parent="."]
script = ExtResource("3")

[node name="HBoxContainer" type="HBoxContainer" parent="OverworldHUD"]
offset_left = 10.0
offset_top = 10.0
offset_right = 400.0
offset_bottom = 30.0

[node name="PartyLabel" type="Label" parent="OverworldHUD/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
text = "Party: 1/6"

[node name="Spacer" type="Control" parent="OverworldHUD/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)

[node name="CaptureLabel" type="Label" parent="OverworldHUD/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
text = "Balls: 5"

[node name="Spacer2" type="Control" parent="OverworldHUD/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)

[node name="GoldLabel" type="Label" parent="OverworldHUD/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
text = "Gold: 0"

[node name="PvPButton" type="Button" parent="OverworldHUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -90.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 35.0
text = "PvP"

[node name="PartyMenu" parent="." instance=ExtResource("4")]

[node name="DialogueBox" parent="." instance=ExtResource("5")]

[node name="ShopMenu" parent="." instance=ExtResource("6")]
